--- a/package.json
+++ b/package.json
@@ -9,11 +9,13 @@
   "private": true,
   "dependencies": {
     "axios": "^0.27.2",
-    "cra-template-react-typescript-redux-saga": "0.1.1",
     "react": "^18.1.0",
     "react-beautiful-dnd": "^13.1.0",
     "react-dom": "^18.1.0",
-    "react-scripts": "5.0.1"
+    "react-redux": "^8.0.1",
+    "react-scripts": "5.0.1",
+    "redux": "^4.2.0",
+    "redux-saga": "^1.1.3"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -21,7 +23,11 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "serve": "serve -s build",
-    "build-and-serve": "npm run build && npm run serve"
+    "build-and-serve": "npm run build && npm run serve",
+    "lint": "eslint ./src/",
+    "lint:fix": "eslint --fix ./src/",
+    "prettier": "prettier --check ./src/",
+    "prettier:fix": "prettier --write ./src/"
   },
   "eslintConfig": {
     "extends": [
@@ -45,6 +51,18 @@
     ]
   },
   "devDependencies": {
-    "eslint": "^8.14.0"
+    "@types/react-dom": "^18.0.3",
+    "@typescript-eslint/eslint-plugin": "^5.21.0",
+    "@typescript-eslint/parser": "^5.21.0",
+    "eslint": "^8.14.0",
+    "eslint-config-google": "^0.14.0",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-jsx-a11y": "^6.5.1",
+    "eslint-plugin-prettier": "^4.0.0",
+    "eslint-plugin-react": "^7.29.4",
+    "eslint-plugin-react-hooks": "^4.5.0",
+    "prettier": "^2.6.2",
+    "typescript": "^4.6.4"
   }
 }
