--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-beautiful-dnd": "^13.1.0",
     "react-dom": "^18.1.0",
     "react-redux": "^8.0.1",
+    "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "redux": "^4.2.0",
     "redux-saga": "^1.1.3"
@@ -63,6 +64,7 @@
     "eslint-plugin-react": "^7.29.4",
     "eslint-plugin-react-hooks": "^4.5.0",
     "prettier": "^2.6.2",
+    "prettier-eslint": "^14.0.2",
     "typescript": "^4.6.4"
   }
 }
